# cvblob

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  README  README.md  cmake-variants.yaml  meson.build
cvBlob/: CMakeLists.txt  cvb_aux.cpp  cvb_aux.h  cvb_blob.cpp  cvb_blob.h  cvb_blob_list.cpp  cvb_blob_list.h  cvb_contour.cpp  cvb_contour.h  cvb_defines.h  cvb_track.cpp  cvb_track.h  cvcolor.cpp  cvlabel.cpp
samples/: Makefile  red_object_tracking.cpp  red_object_tracking.txt
test/: CMakeLists.txt  EnterExitCrossingPaths2front_blobs.mpeg  EnterExitCrossingPaths2front_blobs.txt  test.cpp  test_random.cpp  test_tracking.cpp
vc/: README  cvBlob.sln
vc/TestDLL/: TestDLL.cpp  TestDLL.vcxproj  TestDLL.vcxproj.filters
vc/cvBlob/: cvBlob.vcxproj  cvBlob.vcxproj.filters
